demo08-ingress/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /nginx1
            backend:
              service:
                name: svc-nginx1
                port:
                  number: 80
          - pathType: Prefix
            path: /nginx2
            backend:
              service:
                name: svc-nginx2
                port:
                  number: 90
