demo08-ingress/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx1
  labels:
    app: deployment-nginx1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - name: nginx1
        image: nginx:latest
        ports:
          - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx2
  labels:
    app: deployment-nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx2
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx1
spec:
  selector:
    app: nginx1
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx2
spec:
  selector:
    app: nginx2
  ports:
  - port: 90
    targetPort: 80
    protocol: TCP
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /nginx1
            backend:
              service:
                name: svc-nginx1
                port:
                  number: 80
          - pathType: Prefix
            path: /nginx2
            backend:
              service:
                name: svc-nginx2
                port:
                  number: 90
